--- a/inst/app/www/template/template.html
+++ b/inst/app/www/template/template.html
@@ -169,8 +169,9 @@
       <tr>
         <td>
           <a href="https://thinkr-open.github.io/signature/" dir="ltr" target="_blank">
-            <img src="https://raw.githubusercontent.com/ThinkR-open/signature/refs/heads/main/a" alt="ThinkR banner"
-              border="0" height="150" width="520" style="max-width:520px;width:520px;height:150px" />
+            <img src="https://raw.githubusercontent.com/ThinkR-open/signature/refs/heads/main/assets/banner/current.png"
+              alt="ThinkR banner" border="0" height="150" width="520"
+              style="max-width:520px;width:520px;height:150px" />
         </td>
       </tr>
     </tbody>
